--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "^5.3.0",
     "astro-loader-pocketbase": "^2.4.1",
     "pocketbase": "^0.25.1",
+    "quill": "^2.0.3",
     "tailwindcss": "^4.0.6"
   }
 }
