--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.2",
+    "@astrojs/sitemap": "^3.2.1",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.3.0",
     "astro-loader-pocketbase": "^2.4.1",
