--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "dependencies": {
     "@astrojs/node": "^9.1.2",
     "@astrojs/sitemap": "^3.2.1",
+    "@auth/core": "^0.37.4",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.3.0",
     "astro-loader-pocketbase": "^2.4.1",
+    "auth-astro": "^4.2.0",
+    "better-sqlite3": "^11.8.1",
     "pocketbase": "^0.25.1",
     "quill": "^2.0.3",
-    "tailwindcss": "^4.0.6"
+    "sweetalert2": "^11.17.2",
+    "tailwindcss": "^4.0.6",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12"
   }
 }
