--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.3.0",
     "astro-loader-pocketbase": "^2.4.1",
     "auth-astro": "^4.2.0",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
     "pocketbase": "^0.25.1",
     "quill": "^2.0.3",
