--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "auth-astro": "^4.2.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^11.8.1",
+    "flatpickr": "^4.6.13",
+    "nanostores": "^0.11.4",
     "pocketbase": "^0.25.1",
     "quill": "^2.0.3",
     "sweetalert2": "^11.17.2",
